--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Cousine:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Cousine:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 
 /* font-family: 'Cousine', monospace; */
-    
+
 html,
 body {
   padding: 0;
@@ -17,4 +17,18 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.contact-lottie {
+  float: right;
+  margin-top:0px !important;
+  width:600px !important;
+  margin-right: -200px !important;
+}
+
+.thankyou-lottie {
+  float: right;
+  margin-top:-70px !important;
+  width:600px !important;
+  margin-right: -200px !important;
 }
