--- a/components/Para/Para.module.css
+++ b/components/Para/Para.module.css
@@ -2,3 +2,9 @@
     min-height:10px;
     font-family: 'Cousine', monospace;
 }
+.container p{
+    margin:0;
+}
+.container{
+    overflow: hidden;
+}
