--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,7 +23,7 @@ a {
   position: absolute;
   top:0;
   right:0;
-  margin-top:50px !important;
+  margin:50px 0 0 0 !important;
   width:600px !important;
 }
 
@@ -32,7 +32,6 @@ a {
     position: absolute;
     top: 0;
     right: 0;
-    margin-top: -58px !important;
+    margin:-58px -58px 0 0 !important;
     width: 600px !important;
-    margin-right: -58px !important;
 }
